--- a/index.html
+++ b/index.html
@@ -20,30 +20,42 @@
   </head>
   <!-- Navi -->
   <body>
-    <header>
+    <header class="page-header">
       <div class="container nav-container nav-border">
-          <nav class="nav-container">
-            <a href="./index.html" class="logo list"><span class="logo-accent">WEB</span>STUDIO</a>
-          
-            <ul class="site-nav list">
-              <li><a href="./index.html" class="header-link current links list">Studio</a> 
-            <div class="header-list-item">
-              </div>
+        <nav class="nav-container">
+          <a href="./index.html" class="logo list"
+            ><span class="logo-accent">WEB</span>STUDIO</a
+          >
+
+          <ul class="site-nav list">
+            <li>
+              <a href="./index.html" class="header-link current links list"
+                >Studio</a
+              >
+              <div class="header-list-item"></div>
             </li>
-              <li><a href="./portfolio.html" class="header-link  links list">Portfolio</a></li>
-              <li><a href="/" class="header-link links list">Contacts</a></li>
-            </ul>
-          </nav>
-            <address class="address">
-              <ul class="auth-nav list">
-                <li>
-                  <a href="mailto:info@devstudio.com" class="links list">info@devstudio.com</a>
-                </li>
-                <li>
-                  <a href="tel:+110001111111" class="links list">+11 (000) 111-11-11</a>
-                </li>
-              </ul>
-            </address>
+            <li>
+              <a href="./portfolio.html" class="header-link links list"
+                >Portfolio</a
+              >
+            </li>
+            <li><a href="/" class="header-link links list">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="auth-nav list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="auth-link links list"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="auth-link links list"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <main>
@@ -51,7 +63,9 @@
       <section class="hero-section">
         <div class="main-part container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="main-button">Order Service</button>
+          <button type="button" class="main-button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <!-- Soft skills -->
@@ -65,8 +79,8 @@
                   <use href="./images/srpite.svg#icon-antenna"></use>
                 </svg>
               </div>
-                <h3 class="subtitle">Strategy</h3>
-                <p class="section-description">
+              <h3 class="subtitle">Strategy</h3>
+              <p class="section-description">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
@@ -152,28 +166,48 @@
                 <ul class="sm-list list">
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="instagram">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="instagram"
+                      >
                         <use href="./images/srpite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="twitter">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="twitter"
+                      >
                         <use href="./images/srpite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="facebook">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="facebook"
+                      >
                         <use href="./images/srpite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="linkedin">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="linkedin"
+                      >
                         <use href="./images/srpite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -193,28 +227,48 @@
                 <ul class="sm-list list">
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="instagram">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="instagram"
+                      >
                         <use href="./images/srpite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="twitter">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="twitter"
+                      >
                         <use href="./images/srpite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="facebook">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="facebook"
+                      >
                         <use href="./images/srpite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="linkedin">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="linkedin"
+                      >
                         <use href="./images/srpite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -234,28 +288,48 @@
                 <ul class="sm-list list">
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="instagram">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="instagram"
+                      >
                         <use href="./images/srpite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="twitter">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="twitter"
+                      >
                         <use href="./images/srpite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="facebook">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="facebook"
+                      >
                         <use href="./images/srpite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="linkedin">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="linkedin"
+                      >
                         <use href="./images/srpite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -275,28 +349,48 @@
                 <ul class="sm-list list">
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="instagram">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="instagram"
+                      >
                         <use href="./images/srpite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="twitter">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="twitter"
+                      >
                         <use href="./images/srpite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="facebook">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="facebook"
+                      >
                         <use href="./images/srpite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sm">
                     <a href="#" class="sm-icon">
-                      <svg class="sm-picture" width="16" height="16" aria-label="linkedin">
+                      <svg
+                        class="sm-picture"
+                        width="16"
+                        height="16"
+                        aria-label="linkedin"
+                      >
                         <use href="./images/srpite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -314,42 +408,72 @@
           <ul class="customers-list list">
             <li class="icon">
               <a href="#" class="customers-icon">
-                <svg class="customers-picture" width="41" height="47" aria-label="client">
+                <svg
+                  class="customers-picture"
+                  width="41"
+                  height="47"
+                  aria-label="client"
+                >
                   <use href="./images/srpite.svg#icon-ya"></use>
                 </svg>
               </a>
             </li>
             <li class="icon">
               <a href="#" class="customers-icon">
-                <svg class="customers-picture" width="40" height="52" aria-label="client">
+                <svg
+                  class="customers-picture"
+                  width="40"
+                  height="52"
+                  aria-label="client"
+                >
                   <use href="./images/srpite.svg#icon-tagline"></use>
                 </svg>
               </a>
             </li>
             <li class="icon">
               <a href="#" class="customers-icon">
-                <svg class="customers-picture" width="44" height="41" aria-label="client">
+                <svg
+                  class="customers-picture"
+                  width="44"
+                  height="41"
+                  aria-label="client"
+                >
                   <use href="./images/srpite.svg#icon-company"></use>
                 </svg>
               </a>
             </li>
             <li class="icon">
               <a href="#" class="customers-icon">
-                <svg class="customers-picture" width="84" height="41" aria-label="client">
+                <svg
+                  class="customers-picture"
+                  width="84"
+                  height="41"
+                  aria-label="client"
+                >
                   <use href="./images/srpite.svg#icon-foster"></use>
                 </svg>
               </a>
             </li>
             <li class="icon">
               <a href="#" class="customers-icon">
-                <svg class="customers-picture" width="63" height="45" aria-label="client">
+                <svg
+                  class="customers-picture"
+                  width="63"
+                  height="45"
+                  aria-label="client"
+                >
                   <use href="./images/srpite.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
             <li class="icon">
               <a href="#" class="customers-icon">
-                <svg class="customers-picture" width="94" height="44" aria-label="client">
+                <svg
+                  class="customers-picture"
+                  width="94"
+                  height="44"
+                  aria-label="client"
+                >
                   <use href="./images/srpite.svg#icon-tag"></use>
                 </svg>
               </a>
@@ -361,49 +485,84 @@
     <!-- footer -->
     <footer class="page-footer">
       <div class="container footer-content">
-        <div class="footer-part">    
-              <a href="./index.html" class="logo-footer list"><span class="logo-accent">WEB</span>STUDIO</a>
-              <p class="footer-text">
-                Increase the flow of customers and sales for your business with
-                digital marketing & growth solutions.
-              </p>
-          </div>  
-            <div class="footer-sm">
-              <p class="footer-sm-description">Social media</p>
-              <ul class="footer-sm-list list">
-                <li class="sm">
-                  <a href="#" class="footer-sm-icon">
-                    <svg class="sm-picture" width="24" height="24" aria-label="instagram">
-                      <use href="./images/srpite.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="sm">
-                  <a href="#" class="footer-sm-icon">
-                    <svg class="sm-picture" width="24" height="24" aria-label="twitter">
-                      <use href="./images/srpite.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="sm">
-                  <a href="#" class="footer-sm-icon">
-                    <svg class="sm-picture" width="24" height="24" aria-label="facebook">
-                      <use href="./images/srpite.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="sm">
-                  <a href="#" class="footer-sm-icon">
-                    <svg class="sm-picture" width="24" height="24" aria-label="linkedin">
-                      <use href="./images/srpite.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </div>
-        
+        <div class="footer-part">
+          <a href="./index.html" class="logo-footer list"
+            ><span class="logo-accent">WEB</span>STUDIO</a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-sm">
+          <p class="footer-sm-description">Social media</p>
+          <ul class="footer-sm-list list">
+            <li class="sm">
+              <a href="#" class="footer-sm-icon">
+                <svg
+                  class="sm-picture"
+                  width="24"
+                  height="24"
+                  aria-label="instagram"
+                >
+                  <use href="./images/srpite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sm">
+              <a href="#" class="footer-sm-icon">
+                <svg
+                  class="sm-picture"
+                  width="24"
+                  height="24"
+                  aria-label="twitter"
+                >
+                  <use href="./images/srpite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sm">
+              <a href="#" class="footer-sm-icon">
+                <svg
+                  class="sm-picture"
+                  width="24"
+                  height="24"
+                  aria-label="facebook"
+                >
+                  <use href="./images/srpite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sm">
+              <a href="#" class="footer-sm-icon">
+                <svg
+                  class="sm-picture"
+                  width="24"
+                  height="24"
+                  aria-label="linkedin"
+                >
+                  <use href="./images/srpite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close" data-modal-close>
+          <svg
+            class="modal-close-icon"
+            width="8"
+            height="8"
+            aria-label="close-icon"
+          >
+            <use href="./images/srpite.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
