--- a/portfolio.html
+++ b/portfolio.html
@@ -21,21 +21,35 @@
     <header class="page-header">
       <div class="container nav-container nav-border">
         <nav class="nav-container">
-          <a href="./index.html" class="logo list"><span class="logo-accent">WEB</span>STUDIO</a>
-    
+          <a href="./index.html" class="logo list"
+            ><span class="logo-accent">WEB</span>STUDIO</a
+          >
+
           <ul class="site-nav list">
-            <li><a href="./index.html" class="header-link links list">Studio</a></li>
-            <li><a href="./portfolio.html" class="header-link current-portfolio links list">Portfolio</a></li>
+            <li>
+              <a href="./index.html" class="header-link links list">Studio</a>
+            </li>
+            <li>
+              <a
+                href="./portfolio.html"
+                class="header-link current-portfolio links list"
+                >Portfolio</a
+              >
+            </li>
             <li><a href="/" class="header-link links list">Contacts</a></li>
           </ul>
         </nav>
         <address class="address">
           <ul class="auth-nav list">
             <li>
-              <a href="mailto:info@devstudio.com" class="header-link links list">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="auth-link links list"
+                >info@devstudio.com</a
+              >
             </li>
             <li>
-              <a href="tel:+110001111111" class="header-link links list">+11 (000) 111-11-11</a>
+              <a href="tel:+110001111111" class="auth-link links list"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
@@ -57,15 +71,22 @@
               <button type="button" class="button links">Marketing</button>
             </li>
           </ul>
-<!-- Protfolio pictures -->
+          <!-- Protfolio pictures -->
           <ul class="examples list">
             <li class="examples-card">
               <a href="" class="link-overlay list">
                 <div class="card-box">
-                  <img src="./images/portfolio/img1.jpg" alt="Interface Concept" width="360" />
+                  <img
+                    src="./images/portfolio/img1.jpg"
+                    alt="Interface Concept"
+                    width="360"
+                  />
                   <div class="card-overlay">
-                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                    Cloud Storage App</p>
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
                 </div>
                 <div class="description-portfolio">
@@ -79,129 +100,179 @@
             <li class="examples-card">
               <a href="" class="link-overlay list">
                 <div class="card-box">
-                  <img src="./images/portfolio/img2.jpg" alt="Payment" width="360" />
+                  <img
+                    src="./images/portfolio/img2.jpg"
+                    alt="Payment"
+                    width="360"
+                  />
                   <div class="card-overlay">
-                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App ·
-                      Cloud Storage App</p>
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
                 </div>
                 <div class="description-portfolio">
-                <h2 class="second-header-portfolio">Cashless Payment</h2>
-                <p class="section-description">Marketing</p>
-              </div>
+                  <h2 class="second-header-portfolio">Cashless Payment</h2>
+                  <p class="section-description">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="examples-card">
               <a href="" class="link-overlay list">
                 <div class="card-box">
-                  <img src="./images/portfolio/img3.jpg" alt="Veditation app" width="360" />
+                  <img
+                    src="./images/portfolio/img3.jpg"
+                    alt="Veditation app"
+                    width="360"
+                  />
                   <div class="card-overlay">
-                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App ·
-                      Cloud Storage App</p>
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
                 </div>
-              <div class="description-portfolio">
-                <h2 class="second-header-portfolio">Meditation App</h2>
-                <p class="section-description">App</p>
-              </div>
+                <div class="description-portfolio">
+                  <h2 class="second-header-portfolio">Meditation App</h2>
+                  <p class="section-description">App</p>
+                </div>
               </a>
             </li>
             <li class="examples-card">
               <a href="" class="link-overlay list">
                 <div class="card-box">
-                  <img src="./images/portfolio/img4.jpg" alt="taxi service" width="360" />
+                  <img
+                    src="./images/portfolio/img4.jpg"
+                    alt="taxi service"
+                    width="360"
+                  />
                   <div class="card-overlay">
-                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App ·
-                      Cloud Storage App</p>
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
                 </div>
-              <div class="description-portfolio">
-                <h2 class="second-header-portfolio">Taxi Service</h2>
-                <p class="section-description">Marketing</p>
-              </div>
+                <div class="description-portfolio">
+                  <h2 class="second-header-portfolio">Taxi Service</h2>
+                  <p class="section-description">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="examples-card">
               <a href="" class="link-overlay list">
                 <div class="card-box">
-                  <img src="./images/portfolio/img5.jpg" alt="Illustrations" width="360" />
+                  <img
+                    src="./images/portfolio/img5.jpg"
+                    alt="Illustrations"
+                    width="360"
+                  />
                   <div class="card-overlay">
-                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App ·
-                      Cloud Storage App</p>
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
                 </div>
-              <div class="description-portfolio">
-                <h2 class="second-header-portfolio">Screen Illustrations</h2>
-                <p class="section-description">Design</p>
-              </div>
+                <div class="description-portfolio">
+                  <h2 class="second-header-portfolio">Screen Illustrations</h2>
+                  <p class="section-description">Design</p>
+                </div>
               </a>
             </li>
             <li class="examples-card">
               <a href="" class="link-overlay list">
                 <div class="card-box">
-                  <img src="./images/portfolio/img6.jpg" alt="courses" width="360" />
+                  <img
+                    src="./images/portfolio/img6.jpg"
+                    alt="courses"
+                    width="360"
+                  />
                   <div class="card-overlay">
-                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App ·
-                      Cloud Storage App</p>
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
                 </div>
-              <div class="description-portfolio">
-                <h2 class="second-header-portfolio">Online Courses</h2>
-                <p class="section-description">Marketing</p>
-              </div>
+                <div class="description-portfolio">
+                  <h2 class="second-header-portfolio">Online Courses</h2>
+                  <p class="section-description">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="examples-card">
               <a href="" class="link-overlay list">
                 <div class="card-box">
-                  <img src="./images/portfolio/img7.jpg" alt="instagram" width="360" />
+                  <img
+                    src="./images/portfolio/img7.jpg"
+                    alt="instagram"
+                    width="360"
+                  />
                   <div class="card-overlay">
-                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App ·
-                      Cloud Storage App</p>
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
                 </div>
-              <div class="description-portfolio">
-                <h2 class="second-header-portfolio">Instagram Stories Concept</h2>
-                <p class="section-description">Design</p>
-              </div>
+                <div class="description-portfolio">
+                  <h2 class="second-header-portfolio">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="section-description">Design</p>
+                </div>
               </a>
             </li>
             <li class="examples-card">
               <a href="" class="link-overlay list">
                 <div class="card-box">
-                  <img src="./images/portfolio/img8.jpg" alt="organic food" width="360" />
+                  <img
+                    src="./images/portfolio/img8.jpg"
+                    alt="organic food"
+                    width="360"
+                  />
                   <div class="card-overlay">
-                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App ·
-                      Cloud Storage App</p>
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
                 </div>
-              <div class="description-portfolio">
-                <h2 class="second-header-portfolio">Organic Food</h2>
-                <p class="section-description">Web Site</p>
-              </div>
+                <div class="description-portfolio">
+                  <h2 class="second-header-portfolio">Organic Food</h2>
+                  <p class="section-description">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="examples-card">
               <a href="" class="link-overlay list">
                 <div class="card-box">
-                  <img src="./images/portfolio/img9.jpg" alt="coffee" width="360" />
+                  <img
+                    src="./images/portfolio/img9.jpg"
+                    alt="coffee"
+                    width="360"
+                  />
                   <div class="card-overlay">
-                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
-                      Exotic Fruit Ecommerce App ·
-                      Cloud Storage App</p>
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
                 </div>
-              <div class="description-portfolio">
-                <h2 class="second-header-portfolio">Fresh Coffee</h2>
-                <p class="section-description">Web Site</p>
-              </div>
+                <div class="description-portfolio">
+                  <h2 class="second-header-portfolio">Fresh Coffee</h2>
+                  <p class="section-description">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
@@ -209,51 +280,71 @@
       </section>
     </main>
     <!-- footer -->
-  <footer class="page-footer">
-    <div class="container footer-content">
-      <div class="footer-part">
-        <a href="./index.html" class="logo-footer list"><span class="logo-accent">WEB</span>STUDIO</a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+    <footer class="page-footer">
+      <div class="container footer-content">
+        <div class="footer-part">
+          <a href="./index.html" class="logo-footer list"
+            ><span class="logo-accent">WEB</span>STUDIO</a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-sm">
+          <p class="footer-sm-description">Social media</p>
+          <ul class="footer-sm-list list">
+            <li class="sm">
+              <a href="#" class="footer-sm-icon">
+                <svg
+                  class="sm-picture"
+                  width="24"
+                  height="24"
+                  aria-label="instagram"
+                >
+                  <use href="./images/srpite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sm">
+              <a href="#" class="footer-sm-icon">
+                <svg
+                  class="sm-picture"
+                  width="24"
+                  height="24"
+                  aria-label="twitter"
+                >
+                  <use href="./images/srpite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sm">
+              <a href="#" class="footer-sm-icon">
+                <svg
+                  class="sm-picture"
+                  width="24"
+                  height="24"
+                  aria-label="facebook"
+                >
+                  <use href="./images/srpite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sm">
+              <a href="#" class="footer-sm-icon">
+                <svg
+                  class="sm-picture"
+                  width="24"
+                  height="24"
+                  aria-label="linkedin"
+                >
+                  <use href="./images/srpite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="footer-sm">
-        <p class="footer-sm-description">Social media</p>
-        <ul class="footer-sm-list list">
-          <li class="sm">
-            <a href="#" class="footer-sm-icon">
-              <svg class="sm-picture" width="24" height="24" aria-label="instagram">
-                <use href="./images/srpite.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="sm">
-            <a href="#" class="footer-sm-icon">
-              <svg class="sm-picture" width="24" height="24" aria-label="twitter">
-                <use href="./images/srpite.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="sm">
-            <a href="#" class="footer-sm-icon">
-              <svg class="sm-picture" width="24" height="24" aria-label="facebook">
-                <use href="./images/srpite.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="sm">
-            <a href="#" class="footer-sm-icon">
-              <svg class="sm-picture" width="24" height="24" aria-label="linkedin">
-                <use href="./images/srpite.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-  
-    </div>
-    </div>
-  </footer>
+    </footer>
   </body>
 </html>
